--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ menu4[2]='<a href="https://viking-slots.co.uk/free-slots/">5 Free Slots';
 
 
 <div id="footer">
-    
+    Are you tired of bland and boring <a href="https://www.orase.com">iPhone cases</a> that fail to protect your device, let alone add any style to it?
 </div>
 
 <table class="footer" align="center" border="0" cellspacing="0" cellpadding="0">
