--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   
     <div id="homebutton"><a href="Default.aspx">Home</a></div>
     <div id="topline2"><a href="ProductsView.aspx?id=9671#features">PC LAPTOP FRIENDLY</a></div>
+	    <div id="topline2"><a href="https://casino-spinpanda.com">Casino Spinpanda</a></div>
     <div id="topline">PC LAPTOP FRIENDLY</div>
     <a href="Register.aspx" id="ctl00_topSection_regStarLink" class="regStarLink"><img src="Images/1px.gif" width="127" height="112"></a>
     
